[package]
name = "demoreadingtest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitbuffer = "0.10.3"
tf-demo-parser = "0.3.3"
main_error = "0.1.1"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0.64"
text_io = "0.1.9"
vdf-serde = "0.3.0"
